--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,34 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="./favicons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./favicons/defaultSvgFavicon.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicons/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="./favicons/apple/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="./favicons/apple/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./favicons/apple/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./favicons/apple/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicons/apple/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="./favicons/apple/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./favicons/apple/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./favicons/apple/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple/apple-touch-icon-180x180.png" />
+    <link color="#6144E5" rel="mask-icon" href="./favicons/apple/safari-pinned-tab.svg" />
+
+    <meta name="msapplication-TileColor" content="#6144E5" />
+    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="msapplication-TileImage" content="./favicons/windows/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="./favicons/windows/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="./favicons/windows/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="./favicons/windows/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="./favicons/windows/mstile-310x150.png" />
+    <meta name="application-name" content="Swap.io" />
+    <meta name="msapplication-config" content="./favicons/browserconfig.xml" />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
     <title>Swap.io</title>
